<resources>
    <string name="app_name">Dolt</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Log In</string>
    <string name="menu_challenges">Challenges</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_profile">Profile</string>
    <string name="logout_button">LOGOUT</string>
    <string name="following_label">Following: %s</string>
    <string name="followers_label">Followers: %s</string>
    <string name="follow_label">Follow</string>
    <string name="follower_label">Follows you</string>
    <string name="unfollow_label">Unfollow</string>
    <string name="search">Search</string>
    <string name="search_hint">Search an user…</string>
    <string name="registerName">Name</string>
    <string name="registerPassword2">Repeat the password</string>
    <string name="registerText">Not registered?. </string>
    <string name="registerLink">Sign up here</string>
    <string name="registerButton">Sign up</string>
    <string name="loginText">Already have an account?. </string>
    <string name="loginLink">Log in here</string>
    <string name="post_hint">Write here…</string>
    <string name="post_button">Post</string>
    <string name="edit_profile_label">Edit profile</string>
    <string name="hint_current_password">Introduce current password…</string>
    <string name="hint_edit_password1">Introduce the new password…</string>
    <string name="hint_edit_password2">Repeat the new password…</string>
    <string name="edit_name_label">Name:</string>
    <string name="edit_password_label">Password:</string>
    <string name="change_image">Change image</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="default_web_client_id">dolt-e68d5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="vote_title">"Vote: "</string>
    <string name="vote_button">Vote</string>
    <string name="send_vote">Send Vote</string>


</resources>