<?xml version="1.0" encoding="utf-8"?>
<!-- res/menu/bottom_nav_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@color/gray"
    >
    <item
        android:id="@+id/navigation_challenges"
        android:background="@color/gray"
        android:title="@string/menu_challenges" />
    <item
        android:id="@+id/navigation_search"
        android:background="@color/gray"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_feed"
        android:background="@color/gray"
        android:title="@string/menu_feed" />
    <item
        android:id="@+id/navigation_profile"
        android:background="@color/gray"
        android:title="@string/menu_profile" />

</menu>


    <!--android:icon="@drawable/ic_home"-->