<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:fitsSystemWindows="true"
        android:layout_marginHorizontal="10dp">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/loginUsername"
            android:inputType="text"
            android:background="?android:attr/navigationBarColor"
            android:textColor="?android:attr/textColor"
            android:textColorHint="@color/light_gray"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/registerName"
            android:inputType="text"
            android:background="?android:attr/navigationBarColor"
            android:textColor="?android:attr/textColor"
            android:textColorHint="@color/light_gray"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/usernameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/loginPassword"
            android:inputType="textPassword"
            android:background="?android:attr/navigationBarColor"
            android:textColor="?android:attr/textColor"
            android:textColorHint="@color/light_gray"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/nameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/password2EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/registerPassword2"
            android:inputType="textPassword"
            android:background="?android:attr/navigationBarColor"
            android:textColor="?android:attr/textColor"
            android:textColorHint="@color/light_gray"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registerButton"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/password2EditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerText" />

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginLink"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:clickable="true"
                android:layout_marginStart="5dp"/>
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>