<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:padding="16dp"
        android:clickable="true">

        <!-- Botón de cerrar -->
        <ImageButton
            android:id="@+id/closeEdit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- Imagen de perfil -->
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closeEdit" />

        <!-- Botón para cambiar imagen -->
        <Button
            android:id="@+id/changeImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_image"
            app:layout_constraintEnd_toEndOf="@id/profileImage"
            app:layout_constraintStart_toStartOf="@id/profileImage"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            android:enabled="true"/>

        <!-- Sección de nombre -->
        <TextView
            android:id="@+id/edit_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/edit_name_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/nameEditText"
            app:layout_constraintTop_toBottomOf="@id/changeImageButton" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/edit_name_label" />

        <!-- Sección de contraseña -->
        <TextView
            android:id="@+id/edit_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/edit_password_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/currentPasswordEditText"
            app:layout_constraintTop_toBottomOf="@id/nameEditText" />

        <EditText
            android:id="@+id/currentPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/hint_current_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/edit_password_label" />

        <EditText
            android:id="@+id/password1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/hint_edit_password1"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/currentPasswordEditText" />

        <EditText
            android:id="@+id/password2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/hint_edit_password2"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/password1EditText" />

        <!-- Botón de guardar -->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="24dp"
            android:text="Guardar cambios"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password2EditText" />

        <Button
            android:id="@+id/deleteUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/delete_account"
            android:textColor="@color/light"
            android:backgroundTint="@color/light"
            app:layout_constraintTop_toBottomOf="@id/saveButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>